# TouhouProject

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  todo.txt
SDL2/i686-w64-mingw32/include/SDL2/: SDL_render.h
SDL2/test/: testime.c  testyuv.c
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_atomic.h
core/: EventManager.cpp  EventManager.h  GameEngine.cpp  GameEngine.h  GameProperties.h  SceneManager.cpp  SceneManager.h  StateManager.cpp  StateManager.h  language.cpp  language.h  utility.h
core/UI/: language.cpp  language.h  text.h
core/UI/elements/: Button.cpp  Button.h
core/UI/scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.h  SettingsMenuScene.cpp  SettingsMenuScene.h
core/file/: Parser.cpp  Parser.h
core/game/: CollisionHelper.cpp  CollisionHelper.h  collision.cpp  collision.h
core/game/ECS/: ComponentManager.cpp  ComponentManager.h  Components.h  ECS.cpp  ECS_DefinesAndConstants.h  EntityManager.cpp  EntityManager.h  EntityTypes.h  components.cpp
core/game/Stages/: Stage.h  Stage1.cpp  Stage1.h  States.h
core/game/objects/: GameObject.h  ObjectTypes.h  Player.cpp  Player.h  createObjects.h
core/game/objects/characters/: Sylphina.cpp  Sylphina.h
core/game/objects/projectiles/: Bullet.cpp  Bullet.h  Projectile.cpp  Projectile.h
core/game/objects/projectiles/patterns/: radial.h
core/game/render/: drawing.cpp  drawing.h
core/scenes/: MainMenuScene.h  Scene.h  SettingsMenuScene.h
libraries/Eigen/: OrderingMethods  PaStiXSupport
libraries/Eigen/src/CholmodSupport/: CholmodSupport.h
libraries/Eigen/src/Core/: Array.h  Matrix.h
libraries/Eigen/src/Core/products/: GeneralMatrixVector.h
libraries/Eigen/src/IterativeLinearSolvers/: IncompleteCholesky.h  IncompleteLUT.h  IterativeSolverBase.h
libraries/Eigen/src/KLUSupport/: KLUSupport.h
libraries/Eigen/src/MetisSupport/: MetisSupport.h
libraries/Eigen/src/OrderingMethods/: Eigen_Colamd.h  Ordering.h
libraries/Eigen/src/PaStiXSupport/: PaStiXSupport.h
libraries/Eigen/src/SparseCholesky/: SimplicialCholesky_impl.h
libraries/Eigen/src/SparseLU/: SparseLU.h  SparseLU_Memory.h
libraries/Eigen/src/SparseQR/: SparseQR.h
libraries/Eigen/src/UmfPackSupport/: UmfPackSupport.h
libraries/SDL2/i686-w64-mingw32/include/SDL2/: SDL_test_md5.h
libraries/SDL2/test/nacl/: common.js
resources/language/: english.lang  english.txt  german.lang  german.txt
